--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,7 @@
   border-radius: 0.25rem;
   padding: 0.5rem 1.6rem;
   cursor: pointer;
+  text-decoration: none;
 }
 
 .__vmc {
@@ -14,4 +15,33 @@
   color: var(--main-pink-color);
   background-color: var(--main-darkest-color);
   border: 1px solid var(--main-pink-color);
+}
+
+.heading {
+  font-size: var(--font-size-var);
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.nav-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.logo-cont {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid white;
+}
+
+.grow-end-c {
+  display: flex;
+  border: 1px solid white;
+  flex: 1 0 auto;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 1rem;
 }
