--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,9 +2,14 @@
   font-family: Roboto, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   --main-darkest-color: #151515;
   --main-gray-color: #31363f;
-  --main-pink-color: hsl(340, 100%, 59%);
+  --main-pink-color: #ff2e74;
   --main-white-color: #fff;
   --color-alt-pink: #fb2576;
+  --font-size-var: 1rem;
+  --font-size-var2: 1.225rem 
+  --font-size-var3: 1.5rem;
+  --font-size-var4: 2rem;
+  --font-size-var5: 2.5rem;
 }
 /*hsl(346, 77%, 55%);
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -18,10 +23,9 @@
  */
 
 html {
-  line-height: 1.15; /* 1 */
+  line-height: 1.5; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
   background: var(--main-darkest-color);
-  color: var(--main-white-color);
 }
 
 /**,
@@ -38,7 +42,11 @@ html {
  */
 
 body {
+  line-height: 1.5; /* 1 */
   margin: 0;
+  font-size: var(--font-size-var);
+  font-weight: 500;
+  color: var(--main-white-color);
 }
 
 /**
