--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,22 +1,3 @@
-.button {
-  border-radius: 0.25rem;
-  padding: 0.5rem 1.6rem;
-  cursor: pointer;
-  text-decoration: none;
-}
-
-.__vmc {
-  background-color: var(--main-pink-color);
-  color: var(--main-white-color);
-  border: 0;
-}
-
-.__vsc {
-  color: var(--main-pink-color);
-  background-color: var(--main-darkest-color);
-  border: 1px solid var(--main-pink-color);
-}
-
 .heading {
   font-size: var(--font-size-var);
   padding-left: 3rem;
@@ -30,18 +11,44 @@
   justify-content: space-around;
 }
 
-.logo-cont {
+.img-c-fit {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid white;
+  object-fit: contain;
 }
 
 .grow-end-c {
   display: flex;
-  border: 1px solid white;
   flex: 1 0 auto;
   justify-content: flex-end;
   align-items: center;
   gap: 1rem;
+}
+
+.button {
+  border-radius: 0.25rem;
+  padding: 0.5rem 1.6rem;
+  cursor: pointer;
+  text-decoration: none;
+  letter-spacing: 0.1rem;
+  &.__vmc {
+    background-color: var(--main-pink-color);
+    color: var(--main-white-color);
+    border: 0;
+    &:hover {
+      color: var(--main-pink-color);
+      background-color: var(--main-darkest-color);
+    }
+  }
+
+  &.__vsc {
+    color: var(--main-pink-color);
+    background-color: var(--main-darkest-color);
+    border: 1px solid var(--main-pink-color);
+    &:hover {
+      background-color: var(--main-pink-color);
+      color: var(--main-white-color);
+    }
+  }
 }
