--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,9 +19,19 @@
 }
 
 .title {
-  font-size: 5rem;
+  font-size: 7rem;
   margin-bottom: 1rem;
   margin-top: 2rem;
+  text-shadow: 3px 0 var(--main-pink-color), -3px 0 var(--main-pink-color),
+    0 3px var(--main-pink-color), 0 -3px var(--main-pink-color),
+    2px 2px var(--main-pink-color), -2px -2px var(--main-pink-color),
+    2px -2px var(--main-pink-color), -2px 2px var(--main-pink-color);
+}
+
+.title > span {
+  position: relative;
+  animation: jumpy 1s infinite;
+  display: inline-block;
 }
 
 .presentation {
@@ -74,5 +84,34 @@
       background-color: var(--main-pink-color);
       color: var(--main-white-color);
     }
+  }
+}
+
+.title > span:nth-child(1) {
+  animation-delay: 0.1s;
+}
+
+.title > span:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.title > span:nth-child(3) {
+  animation-delay: 0.3s;
+}
+.title > span:nth-child(4) {
+  animation-delay: 0.4s;
+}
+
+.title > span:nth-child(5) {
+  animation-delay: 0.5s;
+}
+@keyframes jumpy {
+  0%,
+  40%,
+  100% {
+    transform: translateY(0);
+  }
+  20% {
+    transform: translateY(-1rem);
   }
 }
