--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@
   --main-gray-color: #31363f;
   --main-pink-color: #ff2e74;
   --main-white-color: #fff;
+  --err-color: #f02849;
   --color-alt-pink: #fb2576;
   --font-size-var: 1rem;
   --font-size-var2: 1.225rem 
