--- a/client/src/App.css
+++ b/client/src/App.css
@@ -121,3 +121,10 @@ small {
 .rc {
   position: relative;
 }
+
+.shortener-err-div {
+  overflow: hidden;
+  font-size: 0.8rem;
+  min-height: 1.2rem;
+  color: var(--main-pink-color);
+}
