--- a/client/src/App.css
+++ b/client/src/App.css
@@ -123,8 +123,40 @@ small {
 }
 
 .shortener-err-div {
-  overflow: hidden;
   font-size: 0.8rem;
   min-height: 1.2rem;
   color: var(--main-pink-color);
+  max-height: 1.25rem;
+  overflow-y: hidden;
+  overflow-x: auto;
+  text-wrap: nowrap;
+}
+
+.scroller {
+  --scrollbar-color-thumb: hotpink;
+  --scrollbar-color-track: transparent;
+  --scrollbar-width: thin;
+  --scrollbar-width-legacy: 0.3rem;
+}
+
+/* Modern browsers with `scrollbar-*` support */
+@supports (scrollbar-width: auto) {
+  .scroller {
+    scrollbar-color: var(--scrollbar-color-thumb) var(--scrollbar-color-track);
+    scrollbar-width: var(--scrollbar-width);
+  }
+}
+
+/* Legacy browsers with `::-webkit-scrollbar-*` support */
+@supports selector(::-webkit-scrollbar) {
+  .scroller::-webkit-scrollbar-thumb {
+    background: var(--scrollbar-color-thumb);
+  }
+  .scroller::-webkit-scrollbar-track {
+    background: var(--scrollbar-color-track);
+  }
+  .scroller::-webkit-scrollbar {
+    max-width: var(--scrollbar-width-legacy);
+    max-height: var(--scrollbar-width-legacy);
+  }
 }
