--- a/client/src/components/shortener.css
+++ b/client/src/components/shortener.css
@@ -33,6 +33,9 @@
   display: flex;
   align-items: center;
   font-size: 1.1rem;
+  &.__bg {
+    font-size: 1.3rem;
+  }
 }
 
 .shortener-input {
@@ -66,6 +69,13 @@
   left: 0;
   box-shadow: 0 0 1.6rem 1.3rem;
   animation: linear 10s infinite lightx;
+}
+
+.utils-url {
+  display: flex;
+  margin: 0.4rem 0;
+  margin-top: 1rem;
+  font-size: 1rem;
 }
 
 @keyframes lightx {
