--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,6 +15,45 @@
   padding-top: 1.3rem;
   overflow: hidden;
   gap: 1.5rem;
+  &.__f {
+    text-overflow: ellipsis;
+    max-width: 100%;
+  }
+}
+
+.manager-header-container {
+  margin-right: 1rem;
+}
+
+.profile-header-container {
+  display: flex;
+  max-width: 13rem;
+  max-height: 3rem;
+}
+
+.pfp-image-header {
+  height: 100%;
+  width: 100%;
+  border-radius: 100%;
+}
+
+.pfp-image-header-container {
+  width: 3rem;
+  height: 100%;
+}
+
+.username-header-container {
+  display: flex;
+  width: 10rem;
+  justify-content: left;
+  align-items: center;
+  padding-left: 0.5rem;
+}
+
+.username-header-display {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .title {
