--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,10 @@
   --font-size-var4: 2rem;
   --font-size-var5: 2.5rem;
 }
+
+#root {
+  height: 100vh;
+}
 /*hsl(346, 77%, 55%);
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
@@ -52,6 +56,8 @@ body {
   font-weight: 500;
   color: var(--main-white-color);
   min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 /**
@@ -60,7 +66,6 @@ body {
 
 main {
   display: block;
-  height: 100vh;
 }
 
 /**
