--- a/client/src/pages/Settings.css
+++ b/client/src/pages/Settings.css
@@ -66,7 +66,7 @@
   border-radius: 100%;
 }
 
-.profile-file-container {
+.right-flex-container {
   display: flex;
   align-items: center;
   padding: 1rem;
@@ -78,7 +78,7 @@
   position: relative;
 }
 
-.outer-image-box {
+.left-flex-container {
   display: flex;
   align-items: center;
   padding: 1rem;
@@ -119,32 +119,47 @@
   margin-left: 1.12rem;
 }
 
-@media (min-width: 1200px) {
-  .outer-image-box {
-    flex: 0 0 25% !important;
-    max-width: 25% !important;
-  }
-  .button-submit-container {
-    margin-left: 25% !important;
-  }
+.out-sec {
+  display: flex;
+  flex-wrap: wrap;
+}
+.panel-border {
+  border-right: 1px solid rgba(138, 138, 138, 0.06) !important;
 }
 
-@media (min-width: 992px) {
-  .profile-file-container {
-    flex: 0 0 33.3333333333% !important;
-    max-width: 33.3333333333% !important;
-  }
+.relative-input {
+  position: relative;
+  margin: 0;
+  padding-right: 2rem;
+  width: 100%;
+}
 
-  .button-submit-container {
-    flex: 0 0 33.3333333333% !important;
-    max-width: 33.3333333333% !important;
-  }
+.panel {
+  padding: 0.8rem;
+}
+
+.security-label-column {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  width: 100%;
+  justify-content: center;
+}
+
+.security-input-column {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  width: 100%;
+}
+
+.sec-update-button {
 }
 
 @media (min-width: 768px) {
-  .profile-file-container {
-    flex: 0 0 50%;
-    max-width: 50%;
+  .right-flex-container {
+    flex: 0 0 50% !important;
+    max-width: 50% !important;
     justify-content: flex-start !important;
   }
 
@@ -152,9 +167,50 @@
     margin-left: 33.3333333333% !important;
   }
 
-  .outer-image-box {
+  .left-flex-container {
     flex: 0 0 33.3333333333% !important;
     max-width: 33.3333333333% !important;
     justify-content: flex-end !important;
+  }
+  .panel {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+  .security-label-column {
+    flex: 0 0 33.3333333333%;
+    max-width: 33.3333333333%;
+  }
+
+  .sec-update-button {
+    flex: 0 0 33.3333333333%;
+    max-width: 33.3333333333%;
+    margin-left: 33.3333333333%;
+    padding: 1rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .right-flex-container {
+    flex: 0 0 33.3333333333% !important;
+    max-width: 33.3333333333% !important;
+  }
+
+  .button-submit-container {
+    flex: 0 0 33.3333333333% !important;
+    max-width: 33.3333333333% !important;
+  }
+  .security-input-column {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .left-flex-container {
+    flex: 0 0 25% !important;
+    max-width: 25% !important;
+  }
+  .button-submit-container {
+    margin-left: 25% !important;
   }
 }
