--- a/client/src/pages/Settings.css
+++ b/client/src/pages/Settings.css
@@ -170,6 +170,12 @@
   font-size: 1.2rem;
 }
 
+.panel-pdl {
+  padding: 0 3rem;
+}
+
+.r-panel {
+}
 @media (min-width: 768px) {
   .right-flex-container {
     flex: 0 0 50% !important;
@@ -186,13 +192,20 @@
     max-width: 33.3333333333% !important;
     justify-content: flex-end !important;
   }
+
   .panel {
     flex: 0 0 50%;
     max-width: 50%;
   }
+
   .security-label-column {
     flex: 0 0 33.3333333333%;
     max-width: 33.3333333333%;
+  }
+
+  .security-input-column {
+    flex: 0 0 66.6666666667%;
+    max-width: 66.6666666667%;
   }
 
   .sec-update-button {
@@ -200,6 +213,12 @@
     max-width: 33.3333333333%;
     margin-left: 33.3333333333%;
     padding: 1rem;
+  }
+
+  .r-panel {
+    flex-basis: 0;
+    flex-grow: 1;
+    max-width: 100%;
   }
 }
 
