--- a/client/src/components/Url.css
+++ b/client/src/components/Url.css
@@ -50,6 +50,7 @@
   text-overflow: ellipsis;
   text-wrap: nowrap;
 }
+
 .itt {
   display: flex;
   align-items: center;
@@ -64,10 +65,25 @@
   justify-content: center;
   padding-left: 0.2rem;
 }
+
 .tdt {
   display: none;
   color: #fff;
   opacity: 0.4;
+}
+
+.tend {
+  position: relative;
+}
+
+.tend-dropdown-menu {
+  position: absolute;
+  top: 100%;
+  background-color: var(--main-gray-color);
+  padding: 0.4rem 0.8rem;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (min-width: 540px) {
