--- a/client/src/pages/Urls.css
+++ b/client/src/pages/Urls.css
@@ -1,30 +1,45 @@
 .centered-container {
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0 1rem;
-  width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 1rem;
+    width: 100%;
+}
+
+.pagbutt {
+    width: 1rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.dot:disabled,
+.dot:hover {
+    border-color: var(--main-darkest-color) !important;
+    background-color: unset !important;
+    cursor: text;
+    color: var(--main-pink-color) !important;
 }
 
 @media (min-width: 540px) {
-  .centered-container {
-    max-width: 540px;
-  }
+    .centered-container {
+        max-width: 540px;
+    }
 }
 
 @media (min-width: 720px) {
-  .centered-container {
-    max-width: 720px;
-  }
+    .centered-container {
+        max-width: 720px;
+    }
 }
 
 @media (min-width: 960px) {
-  .centered-container {
-    max-width: 960px;
-  }
+    .centered-container {
+        max-width: 960px;
+    }
 }
 
 @media (min-width: 1140px) {
-  .centered-container {
-    max-width: 1140px;
-  }
+    .centered-container {
+        max-width: 1140px;
+    }
 }
